# smartcrop.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.travis/: collect_coverage.sh  run.sh
benches/: analyzer.rs
cli/: Cargo.toml
cli/src/: main.rs
src/: image.rs  lib.rs  math.rs  tests.rs
tests/: compare_to_js.rs  smartcrop-blackbox.rs
