[package]
name = "smartcrop"
description="Clone of smartcrop library in JavaScript"
repository="https://github.com/bekh6ex/rust-smartcrop"
license="GPL-3.0"
version = "0.1.0"
authors = ["Aleksey Bekh-Ivanov <6ex@mail.ru>"]
include = [
    "src/*.rs",
    "Cargo.toml",
]

[badges]
travis-ci = { repository = "bekh6ex/rust-smartcrop", branch = "master" }
codecov = { repository = "bekh6ex/rust-smartcrop" }
is-it-maintained-issue-resolution = { repository = "bekh6ex/rust-smartcrop" }
is-it-maintained-open-issues = { repository = "bekh6ex/rust-smartcrop" }

[features]
default =["image"]

[dependencies]
image = { version = ">=0.17.0,<0.20.0", optional = true }

[dev-dependencies]
proptest = "^0.7.0"